Fix bug 179308: fix control-key events in Camino so that access keys work properly. r=josh. Affects Camino only.